@@ -37,6 +37,7 @@ nobase_pkginclude_HEADERS +=   \
   Projections/DISFinalState.hh  \
   Projections/DISKinematics.hh  \
   Projections/DISLepton.hh      \
+  Projections/DressedLeptons.hh \
   Projections/FastJets.hh       \
   Projections/FinalState.hh     \
   Projections/FoxWolframMoments.hh \
@@ -53,7 +54,6 @@ nobase_pkginclude_HEADERS +=   \
   Projections/JetAlg.hh         \
   Projections/JetShape.hh       \
   Projections/LeadingParticlesFinalState.hh \
-  Projections/LeptonClusters.hh \
   Projections/LossyFinalState.hh \
   Projections/MergedFinalState.hh \
   Projections/MissingMomentum.hh \
