@@ -3,7 +3,7 @@
 #include "Rivet/Projections/InvMassFinalState.hh"
 #include "Rivet/Projections/MissingMomentum.hh"
 #include "Rivet/Projections/MergedFinalState.hh"
-#include "Rivet/Projections/LeptonClusters.hh"
+#include "Rivet/Projections/DressedLeptons.hh"
 #include "Rivet/Projections/VetoedFinalState.hh"
 
 namespace Rivet {
@@ -45,8 +45,8 @@ namespace Rivet {
     bareleptons.acceptIdPair(pid);
     const bool doClustering = (clusterPhotons != NOCLUSTER);
     const bool useDecayPhotons = (clusterPhotons == CLUSTERALL);
-    LeptonClusters leptons(inputfs, bareleptons, dRmax, doClustering, etaRanges, pTmin, useDecayPhotons);
-    addProjection(leptons, "LeptonClusters");
+    DressedLeptons leptons(inputfs, bareleptons, dRmax, doClustering, etaRanges, pTmin, useDecayPhotons);
+    addProjection(leptons, "DressedLeptons");
 
     // Add MissingMomentum proj to calc MET
     MissingMomentum vismom(inputfs);
@@ -69,7 +69,7 @@ namespace Rivet {
 
 
   int WFinder::compare(const Projection& p) const {
-    PCmp LCcmp = mkNamedPCmp(p, "LeptonClusters");
+    PCmp LCcmp = mkNamedPCmp(p, "DressedLeptons");
     if (LCcmp != EQUIVALENT) return LCcmp;
 
     const WFinder& other = dynamic_cast<const WFinder&>(p);
@@ -83,7 +83,7 @@ namespace Rivet {
   void WFinder::project(const Event& e) {
     clear();
 
-    const LeptonClusters& leptons = applyProjection<LeptonClusters>(e, "LeptonClusters");
+    const DressedLeptons& leptons = applyProjection<DressedLeptons>(e, "DressedLeptons");
     const FinalState& neutrinos = applyProjection<FinalState>(e, "Neutrinos");
 
     // Make and register an invariant mass final state for the W decay leptons
@@ -136,7 +136,7 @@ namespace Rivet {
     const PdgId wpid = (wcharge == 1) ? PID::WPLUSBOSON : PID::WMINUSBOSON;
     _bosons.push_back(Particle(wpid, pW));
 
-    // Find the LeptonClusters and neutrinos which survived the IMFS cut such that we can
+    // Find the DressedLeptons and neutrinos which survived the IMFS cut such that we can
     // extract their original particles
     foreach (const Particle& p, _constituentNeutrinos) {
       _theParticles.push_back(p);
